crates/jupytypst/tests/snapshots/kernel_snapshots__diagnostics_cross_cell.snap
---
source: crates/jupytypst/tests/kernel_snapshots.rs
assertion_line: 125
expression: "run_case(KernelCase\n{\n    init: KernelInit::new(RenderMode::Html, SourceMode::Markup), fixtures:\n    vec![], requests:\n    vec![Request::Execute { input: \"#let f() = panic()\" }, Request::Execute\n    { input: \"#let g() = f()\" }, Request::Execute { input: \"#g()\" },],\n})"
---
init:
  default_format: Html
  source_mode: Markup
  page_setup: |
  ```typc
  ```
  inputs: []

--- request 1 ---
kind: execute
input: |
  ```typ
  #let f() = panic()
  ```
effective_format: Html
status: ok
warnings: []
output_kind: html
output: |
  ```html
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <body></body>
  </html>

  ```

--- request 2 ---
kind: execute
input: |
  ```typ
  #let g() = f()
  ```
effective_format: Html
status: ok
warnings: []
output_kind: html
output: |
  ```html
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <body></body>
  </html>

  ```

--- request 3 ---
kind: execute
input: |
  ```typ
  #g()
  ```
effective_format: Html
status: error
traceback: |
  ```text
  error: panicked
    ┌─ <stdin:1>:1:12
    │
  1 │ #let f() = panic()
    │            ^^^^^^^
    │
    ┌─ <stdin:2>:1:12
    │
  1 │ #let g() = f()
    │            --- error occurred in this call of function `f`
    │
    ┌─ <stdin:3>:1:2
    │
  1 │ #g()
    │  --- error occurred in this call of function `g`
  ```
